--- a/src/app/Core/layout/header/header.css
+++ b/src/app/Core/layout/header/header.css
@@ -33,7 +33,7 @@
   width: 60px;
   height: 50px;
   border-radius: 12px;
-  background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%);
+  background: linear-gradient(135deg, #f63b3b, #4e75df) !important;
   color: white;
   display: flex;
   align-items: center;
